Removed bug from overflow in css stylesheet

--- a/static/css/fabrica.css
+++ b/static/css/fabrica.css
@@ -5,7 +5,7 @@ html,body
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
-    overflow:scroll;
+    /*overflow:scroll;*/
     -webkit-overflow-scrolling:touch;
 }
 @font-face { font-family: 'Odin Rounded'; src: url("../ttf/odinrounded.otf"); font-weight: bold; }
